
2007-03-22 cjg
 * Used the tool divide phrase instead of hardwiring "|"

2007-03-22 cjg
 * Commented out heavy regexps in indexer.pl

2007-03-22 tdb
 * Removed executable properties
 * Added license statement to ScreenProcessor

2007-03-22 tdb
 * Missed size adjustment from modified df_free

2007-03-22 tdb
 * Removed use of prepare_cmd from Convert plugins (now uses $repository->exec)

2007-03-23 tdb
 * Fix Convert plugins that I broke yesterday
 * Add 'html_phrase_id' method to Plugin, to get the phrase id (used by
    Convert)

2007-03-23 tdb
 * Added draft conversion option to document upload page
 * Made Unpack work
 * Few robustness changes to Convert plugins

2007-03-23 tdb
 * Only list conversions TO formats listed in document formats
 * Use document format phrases in ImageMagick/Images

2007-03-30 tdb
 * quote command line arguments in invocation, using quotemeta

2007-04-11 cjg
 * Added a new loglevel which tells when (de)indexing a field is finished.

2007-04-11 cjg
 * Bail out of an unpack if there is no mimetype, avoiding an undef warning.

2007-04-11 cjg
 * Don't index fileinfo field!

2007-04-11 cjg
 * Changed views to index subjects first, and to order subject pages by title.

2007-04-11 cjg
 * Fixed ordering of subjects in view. (sort by name_name rather than name)

2007-04-11 cjg
 * Removed custom_order from lift_embargos which should fix a bug.

2007-04-11 cjg
 * Changed custom_order again to make it sort by name, then failing that
    name_name.
 * ordervalues now gets passed dataset.
 * Compound fields now have their ordervalues set.

2007-04-12 cjg
 * Added index to __index tables causing a great indexing speed improvemnt.
 * Bad db version now does an abort() instead of a log - that way the
    message appears in the web output.

2007-04-13 cjg
 * Fixed spelling mistake recieve => receive
 * Improved the help text regarding security documents and contact-email.
 * Added missing phrase: eprint_fieldname_producers_name
